@@ -1,3 +1,10 @@
+2008-07-26  Richard Dale  <richard.j.dale@gmail.com>
+
+	* Look in all loaded Assemblies for types in lists that might not be in
+	  the Qt assembly such as List<KUrl>.
+	* The code to look up the types of slot arguments was failing for types
+	  in the KTextEditor library
+
 2008-07-26  Arno Rehn  <arno@arnorehn.de>
 
 	* Add a qobject_cast based on C# reflection and qt_metacast.
